<resources>
    <string name="app_name">Ассистент студента</string>
    <string name="login">Вход</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="delete_q">Удалить?</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="very_important_research">Очень важное исследование</string>
    <string name="details">Детали</string>
    <string name="description">Описание</string>
    <string name="number_of_students">Количество студентов</string>
    <string name="project_status">Статус</string>
    <string name="tags">Тэги</string>
    <string name="join_project">Присоединиться</string>
    <string name="filters">Фильтры</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="view_all">Посмотреть все</string>
    <string name="projects">Проекты</string>
    <string name="search_projects">Искать проекты</string>
    <string name="all">Все</string>
    <string name="recommended">Рекомендации</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="change">Изменить</string>
    <string name="interests">Интересы</string>
    <string name="contacts">Контакты</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="nickname">Никнейм</string>
    <string name="save">Сохранить</string>
    <string name="register">Регистрация</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
</resources>