<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthFragment">

    <TextView
        android:id="@+id/auth_tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="start"
        android:layout_marginTop="128dp"
        android:layout_marginStart="24dp"
        android:textAppearance="@style/TextAppearance.StudentAssistant.LargeTitle.Neutral90"
        android:textColor="@color/neutral90" />

    <EditText
        android:id="@+id/auth_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/email"
        android:layout_marginHorizontal="24dp"
        style="@style/Theme.StudentAssistant.EditText" />

    <EditText
        android:id="@+id/auth_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="22dp"
        style="@style/Theme.StudentAssistant.EditText" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        style="@style/Theme.StudentAssistant.LargeButton" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="24dp"
        style="@style/Theme.StudentAssistant.TransparentButton" />

    <ProgressBar
        android:id="@+id/auth_pb"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</LinearLayout>